--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,13 @@ svg {
  	background-color: #f7fcfd;
 }
 
+.bar_long {
+	fill: #35586C;
+}
 
+.bar_others {
+	fill: #6CA6CD;
+}
 
 
 #title {
@@ -76,4 +82,40 @@ button {
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     font-size: 110%;
     margin-left: 100px;
+}
+
+h1 {
+
+
+	font-size: 50px;
+	font-family: Courier New;
+	fill: #8a949e;
+	font-weight: bold;
+	margin-left: 550px;
+
+
+}
+
+h2 {
+
+
+	font-size: 24px;
+	font-family: Courier New;
+	fill: #8a949e;
+	font-weight: bold;
+	margin-left: 150px;
+
+
+}
+
+h3 {
+
+
+	font-size: 15px;
+	font-family: Courier New;
+	fill: #8a949e;
+	font-weight: bold;
+	margin-left: 150px;
+
+
 }
