--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,26 @@ h3 {
 
 
 }
+
+h4 {
+
+	color: red;
+	font-size: 15px;
+	font-family: Courier New;
+	fill: #ff3030;
+	font-weight: bold;
+	margin-left: 100px;
+
+
+}
+
+h5 {
+
+	font-size: 50px;
+	font-family: Courier New;
+	fill: #8a949e;
+	font-weight: bold;
+	margin-left: 350px;
+
+
+}
